--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -1,19 +1,24 @@
-name: Build
+name: build
 on:
   push:
     branches:
       - main
   pull_request:
-    types: [opened, synchronize, reopened]
 jobs:
-  CI:
-    runs-on: ubuntu-lates
+  build:
+    name: Build
+    runs-on: ubuntu-24.04
     steps:
-    - name: Checkups
-      uses: actions/checkout@v4
-    - name: Build Setup
-      uses: actions/setup-node@v3
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
-    
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Build an image from Dockerfile
+        run: docker build .
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          image-ref: '.'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
