--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -12,11 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Build an image from Dockerfile
-        run: docker build -t DecSecOps:${{ github.sha }} .
+        run: docker build -t devsecops:${{ github.sha }} .
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          image-ref: 'DecSecOps:${{ github.sha }}'
+          image-ref: 'devsecops:${{ github.sha }}'
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
